--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="activity_background_default">#FFFFFF</color>
+    <color name="activity_background_default_secondary">#F1F1F1</color>
+    <color name="activity_background_default_dark">#D5D5D5</color>
+    <color name="activity_background_default_anti">#121212</color>
+    <color name="activity_background_default_anti_light_version">#55121212</color>
+    <bool name="status_bar_text_color">true</bool>
+
+    <color name="colorPrimary">@color/activity_background_default</color>
+    <color name="colorPrimaryDark">@color/activity_background_default</color>
+    <color name="colorAccent">@color/activity_background_default_anti</color>
+    <color name="colorAccent_light_version">@color/activity_background_default_anti_light_version</color>
+
 </resources>
